Add uploaders
